# Theoria

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  .lighthouserc.json  .pre-commit-config.yaml  .ruff.toml  .yamllint  AGENT_CONTEXT.md  AGENT_HANDOFF_COMPLETE.md  ANIMATION_ENHANCEMENTS_COMPLETE.md  API_CONNECTION_FIX.md  ARCHITECTURE_COMPLETE.md  ARCHITECTURE_PHASE2_PROGRESS.md  ARCHITECTURE_REVIEW_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  COGNITIVE_SCHOLAR_HANDOFF.md  COGNITIVE_SCHOLAR_HANDOFF_NEW.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  COVERAGE_REVIEW.md  CS-001_COMPLETE.md  DEPLOYMENT.md  DISCOVERY_IMPLEMENTATION_SUMMARY.md  DOCUMENTATION_CLEANUP_SUMMARY.md  EVIDENCE_README.md  HANDOFF_DISCOVERY_AND_ROADMAP.md  HANDOFF_MYPY_FIXES_2025_10_17.md  HANDOFF_NEXT_PHASE.md  HANDOFF_SESSION_2025_01_15.md  HANDOFF_SESSION_2025_10_15.md  IMPLEMENTATION_CONTEXT.md  MEMORY_LEAK_REVIEW.md  NAVIGATION_IMPROVEMENTS.md  NEXT_STEPS.md  OSSF_SCORECARD_FIXES.md  PYTEST_FIX_SUMMARY.md  QUICK_FIX.md  (+69 more)
.github/: PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE_ARCHITECTURE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_card.yml
.github/workflows/: ci.yml  coverage-monitor.yml  deployment-sign.yml  evidence.yml  lighthouse.yml  rag-eval.yml  secret-scanning.yml  security-codeql.yml  security-scorecard.yml  security-zap.yml  validate-evidence-cards.yml
.lighthouseci/baseline/: README.md  manifest.json
.tmp_contract_debug/: contract.db
.windsurf/workflows/: rebuild_corpus.yaml
audit/: api_code_quality.md  checklist.md  cicd_action_items.md  cicd_pipeline_review.md  cicd_workflow_diagram.md  findings.md  geo_code_quality.md  mcp_code_quality.md  metacognition_review.md  new_review_tasks.md  proposed_triage_tasks.md  redteam_quality_analysis.md  report.md
celery/: __init__.py  exceptions.py  schedules.py
celery/app/: __init__.py  task.py
celery/contrib/: __init__.py  pytest.py
celery/utils/: __init__.py  log.py
constraints/: api-constraints.txt  api.txt  base-constraints.txt  base.txt  dev-constraints.txt  dev.txt  guardrails.txt  ml-constraints.txt  ml.txt  prod.txt
contracts/: schemathesis.toml
dashboard/: coverage-dashboard.md  index.html
dashboard/dependency-graph/: dependency-graph.json
data/: intent_samples.csv  providers.yml
data/eval/: baseline.json  production_traces.jsonl  rag_dev.jsonl
data/seeds/: commentaries.yaml  commentaries_additional.yaml  commentary_excerpts.yaml  contradictions.json  contradictions_additional.json  contradictions_catalog.yaml  contradictions_extra.json  geo_places.json  harmonies.json  harmonies.yaml  harmonies_additional.yaml  theological_topics.yaml
docs/: AGENT_AND_PROMPTING_GUIDE.md  AGENT_CONFINEMENT.md  AGENT_THINKING_ENHANCEMENT.md  API.md  BIBLE_TEXT_SCHEMA.md  BLUEPRINT.md  CASE_BUILDER.md  CLI.md  CODEBASE_REVIEW.md  CONTRADICTION_DETECTION.md  Chunking.md  DISCOVERY_FEATURE.md  DISCOVERY_QUICK_START.md  DISCOVERY_SCHEDULER.md  DOCUMENTATION_GUIDE.md  FUTURE_FEATURES_ROADMAP.md  Frontmatter.md  IMPLEMENTATION_GUIDE.md  INDEX.md  INTEGRATIONS.md  LIGHTHOUSE_CI_FIX_2025_01_16.md  LIGHTHOUSE_CI_FIX_2025_10_16.md  LIGHTHOUSE_ENHANCEMENTS.md  LIGHTHOUSE_FIX.md  OSIS.md  RELEASE_NOTES.md  ROADMAP.md  Repo-Health.md  SERVICE_MANAGEMENT.md  TEST_DATABASE_PROPER_FIX_SUMMARY.md  TEST_DATABASE_SCHEMA_ISSUE.md  TREND_ANOMALY_DETECTOR_RESEARCH.md  TheoEngine_Deep_Research_and_Implementation_Plan.md  architecture.md  architecture_review.md  audit_mode_spec.md  authentication.md  case builder v2.md  case_builder.schema.json  case_builder_buddy_summary.md  (+29 more)
docs/adr/: 0001-expose-theoengine-via-mcp.md  0001-hexagonal-architecture.md  0001-mcp-tools-and-apps-sdk.md  0002-ci-security-guardrails.md  0002-strict-typing-roadmap.md  0003-testing-and-coverage.md  0004-domain-application-infrastructure-layering.md  0004-layered-service-restructure.md  0005-test-marker-consolidation.md  0006-local-llm-first-architecture.md  0007-uv-dependency-management.md
docs/agent-tasks/: AGENT_6_AI_RAG_TESTS.md  AGENT_COORDINATOR.md  README.md
docs/agents/: README.md  implementation-guide.md  mcp-integration-guide.md  prompting-guide.md  thinking-enhancement.md
docs/architecture/: README.md  clean-architecture.md  codebase-review.md  improvements.md  migration-example.md  modularity-plan.md  review.md
docs/archive/: README.md
docs/coverage/: 90_PERCENT_STRATEGY.md  COVERAGE_SNAPSHOT_2025-10-31.md
docs/dashboards/: ui-quality-dashboard.md
docs/dev/: query_loading.md  rebuild_log.md
docs/development/: README.md  api-reference.md  chunking.md  cli-reference.md  debugging-guide.md  frontmatter.md  osis.md  (+1 more)
examples/: __init__.py  architecture_migration_step_by_step.py
faker/: __init__.py  config.py
fastapi/: __init__.py  params.py  responses.py  status.py
infra/: Makefile  docker-compose.yml
logs/: telemetry-consent.json  test_results_2025-10-25.md
mcp_server/: CODE_QUALITY_REPORT.md  Dockerfile  IMPROVEMENTS.md  SUMMARY.md  __init__.py  __main__.py  config.py  errors.py  metrics.py  middleware.py  schemas.py  security.py  server.py  validators.py
metrics/: README.md  coverage-baseline.json
perf_metrics/: pytest_marker_baselines.json
ranking/: __init__.py  metrics.py  minimal_reranker.py
scripts/: CODE_QUALITY_REPORT.md  RUN_SCRIPTS_README.md  SERVICE_MANAGEMENT.psm1  backfill_seed_verse_ids.py  check_docs_governance.py  check_sid_changes.py  clear-python-cache.ps1  compare-lighthouse-baseline.mjs  dev.ps1  eval_reranker.py  evidence_tool.py  import_hebrew_bible.py  launcher_helpers.py  lighthouse-init-baseline.mjs  mlflow_tracking.py  reset-reseed-smoke.ps1  reset_reseed_smoke.py  run.ps1  run.sh  run_sql_migrations.py  service-config.json  start-theoria.sh  test_biblical_analysis.py  train_intent.py  train_reranker.py  update_constraints.py
temp_test_dir/: commentary.xml  osis.db
tests/: CONTRIBUTING.md  conftest.py  test_constraints_sync.py  test_redos_fix.py
theo/: checkpoints.py  cli.py
theoria.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
webvtt/: __init__.py
(+1943 files in other folders)
