[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "theoria"
version = "0.0.0"
description = "Theo application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["theo*", "mcp_server*"]
exclude = ["tests*", "fixtures*", "data*", "infra*", "metrics*", "ranking*", "contracts*", "dashboard*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["theo"]
combine_as_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["theo/services/api/app"]
exclude = [
    "docs",
    "tests",
    "typings",
    "scripts",
    "theo/services/cli",
    "theo/services/geo",
    "theo/services/api/tests",
]

[tool.ruff.lint]
extend-select = ["E", "F", "W", "B", "S", "PD", "FA"]
ignore = [
    "E501",
    "E402",
    "F401",
    "F811",
    "F821",
    "F841",
    "B008",
    "B010",
    "B904",
    "B905",
    "S101",
    "S110",
    "S112",
    "S310",
    "S311",
    "S314",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106", "E501"]
"theo/services/api/tests/**" = ["S101", "S106", "E501"]
"theo/services/cli/tests/**" = ["S101", "S106", "E501"]
"typings/**" = ["I001"]
"theo/services/geo/seed_openbible_geo.py" = ["S603", "S607", "E501", "I001"]

[tool.ruff.lint.isort]
known-first-party = ["theo"]
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
files = [
    "theo/services/api/app",
    "theo/services/api/tests",
    "tests/export",
]
ignore_missing_imports = true
warn_unused_configs = true
warn_unused_ignores = true
follow_imports = "skip"

[tool.pytest.ini_options]
# Coverage disabled by default for faster test discovery
# To run with coverage: pytest --cov=theo --cov-report=term-missing --cov-report=xml --cov-fail-under=80
addopts = [
]
testpaths = ["tests"]
markers = [
    "redteam: OWASP LLM red-team regression suite",
    "no_auth_override: disable authentication override fixture for security assertions",
    "slow: slower end-to-end smoke tests",
    "enable_migrations: allow database migrations to execute in tests",
]
filterwarnings = [
    "ignore:jsonschema.exceptions.RefResolutionError is deprecated:DeprecationWarning",
    "ignore:jsonschema.RefResolver is deprecated as of v4.18.0:DeprecationWarning",
    "ignore:Can't sort tables for DROP; an unresolvable foreign key dependency exists between tables:Warning",
]
