[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "theoria"
version = "0.0.0"
description = "Theo application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"theo.data.research" = ["*.json"]

[tool.setuptools.packages.find]
where = ["."]
include = ["theo*", "mcp_server*"]
exclude = ["tests*", "fixtures*", "data*", "infra*", "metrics*", "ranking*", "contracts*", "dashboard*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["theo"]
combine_as_imports = true

[tool.mypy]
python_version = "3.11"
files = [
    "theo/services/api/app",
    "theo/services/api/tests",
    "tests/export",
]
ignore_missing_imports = true
warn_unused_configs = true
warn_unused_ignores = true
follow_imports = "skip"

[tool.pytest.ini_options]
# Coverage disabled by default for faster test discovery
# To run with coverage: pytest --cov=theo --cov-report=term-missing --cov-report=xml --cov-fail-under=80
addopts = [
    "-ra",
    "--strict-markers",
    "--timeout=60",
]
testpaths = ["tests"]
norecursedirs = [
    ".git",
    ".venv",
    ".tox",
    "dist",
    "build",
    "node_modules",
    ".*",
    "__pycache__",
]
markers = [
    "redteam: OWASP LLM red-team regression suite",
    "no_auth_override: disable authentication override fixture for security assertions",
    "slow: long-running tests that require opt-in",
    "enable_migrations: allow database migrations to execute in tests",
    "e2e: end-to-end/system tests",
    "db: database-hitting tests",
    "network: tests that would reach network if not mocked",
    "perf: benchmark-style performance checks",
    "flaky: known-intermittent tests",
]
filterwarnings = [
    "ignore:jsonschema.exceptions.RefResolutionError is deprecated:DeprecationWarning",
    "ignore:jsonschema.RefResolver is deprecated as of v4.18.0:DeprecationWarning",
    "ignore:Can't sort tables for DROP; an unresolvable foreign key dependency exists between tables:Warning",
]
